[package]
name = "grr"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17.5"
assert_cmd = "2.0.11"
predicates = "3.0.3"
assert_fs = "1.0.13"